// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserComments /> renders correctly when empty 1`] = `
<UserComments__MessageContainer>
  <FormattedMessage
    defaultMessage="This user has not posted any comment yet."
    id="app.containers.UsersShowPage.noCommentsForUser"
  />
</UserComments__MessageContainer>
`;

exports[`<UserComments /> renders correctly when empty and own profile 1`] = `
<UserComments__MessageContainer>
  <FormattedMessage
    defaultMessage="You have not posted any comment yet."
    id="app.containers.UsersShowPage.noCommentsForYou"
  />
</UserComments__MessageContainer>
`;

exports[`<UserComments /> renders correctly when error 1`] = `
<UserComments__MessageContainer>
  <FormattedMessage
    defaultMessage="An error has occured, please try again later."
    id="app.containers.UsersShowPage.tryAgain"
  />
</UserComments__MessageContainer>
`;

exports[`<UserComments /> renders correctly with actual comments 1`] = `
<UserComments__Container
  className="e2e-profile-comments"
>
  <a11y__ScreenReaderOnly>
    <FormattedMessage
      defaultMessage="All the comments posted by this user"
      id="app.containers.UsersShowPage.invisibleTitleUserComments"
      tagName="h2"
    />
  </a11y__ScreenReaderOnly>
  <WrappedPostComments
    comments={
      [
        {
          "attributes": {
            "body_multiloc": {
              "en": "Just a comment",
            },
            "children_count": 0,
            "created_at": "2019-03-12T00: 00: 00.000Z",
            "downvotes_count": 0,
            "publication_status": "published",
            "updated_at": "2019-03-26T14: 32: 32.000Z",
            "upvotes_count": 0,
          },
          "id": "commentId",
          "relationships": {
            "author": {
              "data": {
                "id": "authorId",
                "type": "user",
              },
            },
            "parent": {
              "data": null,
            },
            "post": {
              "data": {
                "id": "idea1",
                "type": "idea",
              },
            },
            "user_vote": {
              "data": null,
            },
          },
          "type": "comment",
        },
      ]
    }
    key="idea1"
    postId="idea1"
    postType="idea"
  />
  <WrappedPostComments
    comments={
      [
        {
          "attributes": {
            "body_multiloc": {
              "en": "Just a comment",
            },
            "children_count": 0,
            "created_at": "2019-03-12T00: 00: 00.000Z",
            "downvotes_count": 0,
            "publication_status": "published",
            "updated_at": "2019-03-26T14: 32: 32.000Z",
            "upvotes_count": 0,
          },
          "id": "commentId",
          "relationships": {
            "author": {
              "data": {
                "id": "authorId",
                "type": "user",
              },
            },
            "parent": {
              "data": null,
            },
            "post": {
              "data": {
                "id": "idea2",
                "type": "idea",
              },
            },
            "user_vote": {
              "data": null,
            },
          },
          "type": "comment",
        },
        {
          "attributes": {
            "body_multiloc": {
              "en": "Just a comment",
            },
            "children_count": 0,
            "created_at": "2019-03-12T00: 00: 00.000Z",
            "downvotes_count": 0,
            "publication_status": "published",
            "updated_at": "2019-03-26T14: 32: 32.000Z",
            "upvotes_count": 0,
          },
          "id": "commentId",
          "relationships": {
            "author": {
              "data": {
                "id": "authorId",
                "type": "user",
              },
            },
            "parent": {
              "data": null,
            },
            "post": {
              "data": {
                "id": "idea2",
                "type": "idea",
              },
            },
            "user_vote": {
              "data": null,
            },
          },
          "type": "comment",
        },
      ]
    }
    key="idea2"
    postId="idea2"
    postType="idea"
  />
</UserComments__Container>
`;

exports[`<UserComments /> renders correctly with actual comments and load more button 1`] = `
<UserComments__Container
  className="e2e-profile-comments"
>
  <a11y__ScreenReaderOnly>
    <FormattedMessage
      defaultMessage="All the comments posted by this user"
      id="app.containers.UsersShowPage.invisibleTitleUserComments"
      tagName="h2"
    />
  </a11y__ScreenReaderOnly>
  <WrappedPostComments
    comments={
      [
        {
          "attributes": {
            "body_multiloc": {
              "en": "Just a comment",
            },
            "children_count": 0,
            "created_at": "2019-03-12T00: 00: 00.000Z",
            "downvotes_count": 0,
            "publication_status": "published",
            "updated_at": "2019-03-26T14: 32: 32.000Z",
            "upvotes_count": 0,
          },
          "id": "commentId",
          "relationships": {
            "author": {
              "data": {
                "id": "authorId",
                "type": "user",
              },
            },
            "parent": {
              "data": null,
            },
            "post": {
              "data": {
                "id": "idea1",
                "type": "idea",
              },
            },
            "user_vote": {
              "data": null,
            },
          },
          "type": "comment",
        },
      ]
    }
    key="idea1"
    postId="idea1"
    postType="idea"
  />
  <UserComments__Footer>
    <UserComments__LoadMoreButton
      height="50px"
      icon="refresh"
      onClick={[MockFunction]}
    >
      <FormattedMessage
        defaultMessage="Load more comments"
        id="app.containers.UsersShowPage.loadMoreComments"
      />
    </UserComments__LoadMoreButton>
  </UserComments__Footer>
</UserComments__Container>
`;
